[package]
name = "red_doc"
version = "0.1.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/MAranich/RedDoc"
license-file = "gpl-3.0.md"

keywords = ["cybersecurity", "documentation"]


[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

[dependencies]
chrono = {version = "0.4.44", features = ["serde"]}
clap = {version = "4.6.0", features = ["cargo"]}
serde = {version = "1.0.228", features = ["derive"]}

