[package]
name = "red_doc"
version = "0.1.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/MAranich/RedDoc"
license-file = "gpl-3.0.md"

keywords = ["cybersecurity", "documentation"]


[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
enum_glob_use = "deny"
unwrap_used = "deny"

needless_return = "allow"
assign_op_pattern = "allow"
excessive_precision = "allow"

[dependencies]
atty = "0.2.14"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["cargo"] }
serde = { version = "1.0.228", features = ["derive"] }

serde_json = "1.0"
